only lint the src directory.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,3 +8,5 @@ jobs:
         uses: actions/checkout@v4
       - name: lint
         uses: ludeeus/action-shellcheck@master
+        with:
+          scandir: './src'
