shellcheck action check_together flag.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,4 +9,5 @@ jobs:
       - name: lint
         uses: ludeeus/action-shellcheck@master
         with:
+          check_together: 'yes'
           scandir: './src'
