recursively update submodules; single ci workflow.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
-name: test
+name: ci
 on: [push]
 jobs:
-  test:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - name: check out
@@ -12,3 +12,8 @@ jobs:
       - name: test
         run: |
           cd ${{ github.workspace }} && ./bin/test
+      - name: lint
+        uses: ludeeus/action-shellcheck@master
+        with:
+          check_together: 'yes'
+          scandir: './src'
