--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,8 @@ jobs:
     steps:
       - name: check out
         uses: actions/checkout@v4
+      - name: TEMPORARILY install nc
+        run: apt install nc
       - name: test
         run: |
           cd ${{ github.workspace }} && ./bin/test
