sudo and apt-get.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
       - name: check out
         uses: actions/checkout@v4
       - name: TEMPORARILY install nc
-        run: apt install nc
+        run: sudo apt-get install nc
       - name: test
         run: |
           cd ${{ github.workspace }} && ./bin/test
