--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,11 +6,9 @@ jobs:
     steps:
       - name: check out
         uses: actions/checkout@v4
-      - name: TEMPORARILY install netcat
-        run: sudo apt-get install -y netcat
       - name: test
         run: |
-          cd ${{ github.workspace }} && ./bin/test
+          sudo apt-get install -y netcat && cd ${{ github.workspace }} && ./bin/test
       - name: lint
         uses: ludeeus/action-shellcheck@master
         with:
