--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,11 @@ jobs:
     steps:
       - name: check out
         uses: actions/checkout@v4
+        with:
+          submodules: recursive
+      - name: test
+        run: |
+          cd ${{ github.repository }} && ./bin/test
       - name: lint
         uses: ludeeus/action-shellcheck@master
         with:
